--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
     working_directory: ~/repo
 
     steps:
-      # Step 1: obtain repo from GitHub
+      # Step 1: obtain repo from GitHu
       - checkout
       # Step 2: create virtual env and install dependencies
       - run:
